--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "koa": "^2.5.2",
     "koa-views": "^6.1.4",
     "pug": "^2.0.3",
-    "puppeteer": "^1.6.0"
+    "puppeteer": "^1.6.0",
+    "request": "^2.87.0",
+    "request-promise-native": "^1.0.5"
   }
 }
