连接本地数据库

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^2.6.1",
     "koa": "^2.5.2",
     "koa-views": "^6.1.4",
+    "mongoose": "^5.2.5",
     "nanoid": "^1.1.0",
     "pug": "^2.0.3",
     "puppeteer": "^1.6.0",
