--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/moshen1223/movie-trailer#readme",
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "ejs": "^2.6.1",
+    "glob": "^7.1.2",
     "koa": "^2.5.2",
     "koa-views": "^6.1.4",
     "mongoose": "^5.2.5",
