--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^2.6.1",
     "glob": "^7.1.2",
     "koa": "^2.5.2",
+    "koa-router": "^7.4.0",
     "koa-views": "^6.1.4",
     "mongoose": "^5.2.5",
     "nanoid": "^1.1.0",
